# docpact

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCPACT_AGENT_GUIDE.md  README.md  pyproject.toml  sandbox.Dockerfile
.deepseek/state/: subagents.v1.json
.github/workflows/: ci.yml
docs/: marker-honesty.md  protocolo-v1.md  side-effects-patterns.md
docs/conclusiones/: docpact-claude.md
docs/investigacion/: Del Vibe Coding al Vericoding_ Un Proyecto Arquitectónico para el Código Nativo de IA.md  (+8 more)
tests/: test_bug_predictor_complexity.py  test_config.py  test_config_rn_patrones.py  test_config_suggest.py  test_conversational.py  test_delegator_detection.py  test_deps_checker.py  test_diagnostico.py  test_extractor.py  test_guard.py  test_installer.py  test_lexer.py  test_llm_judge.py  test_main.py  test_marker_honesty.py  test_mcp_doctor.py  test_mcp_tools.py  test_metrics_store.py  test_orchestrator.py  test_orchestrator_semantic.py  test_parser.py  test_reporter.py  test_rn_checker.py  test_rn_crossref.py  test_rn_test_checker.py  test_rn_traceability.py  test_rn_verifier.py  test_rule_prioritize.py  test_runner.py  test_runtime.py  test_sandbox.py  test_semantic_rn.py  test_side_effects.py  test_tenant_safe_regression.py  test_test_quality.py  test_transitive.py  test_ts_parser.py  test_ts_sidefx.py  test_validate_marker_honesty.py  test_validator.py
workplans/: F01-protocolo-y-parser.md  F02-cli-y-verificacion-basica.md  F03-integracion-iodesk.md  F04-especificacion-agnostica.md  README.md  T01-mejora-embeddings-sparse-doc.md  T02-verificacion-semantica-rns.md
(+131 files in other folders)
