[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpact"
version = "0.4.2"
description = "Verificador de CONTRATOS en código — sincroniza docstrings con implementación real"
authors = [
    { name = "ioDesk Team", email = "dev@iodesk.io" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "jsonschema>=4",
]
typecheck = [
    "mypy>=1",
]

[project.urls]
Homepage = "https://github.com/tu-org/docpact"
Documentation = "https://docpact.dev"

[project.scripts]
docpact = "docpact.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docpact"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/docpact --cov-report=term-missing"

[tool.coverage.run]
source = ["src/docpact"]

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "docpact.cli.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docpact.mcp_server"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docpact.runner"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
